# clash-migrator

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
demos/: config.py  key_error.py  render.py  rule_providers.yaml.tpl  yaml_demo.py  yaml_demo_2.py
rules_backup/custom/: direct.list  movie.list  proxy.list
scripts/: dependency.sh  deploy.sh  update_lambda_env.sh  update_rules.sh
src/: clash.py  config.py  config_test.py  lambda_function.py  lambda_function_test.py  proxy.py  proxy_group.py  rule.py  rule_provider.py  rule_provider_test.py  utils.py  yaml_format.py  yaml_format_test.py
templates/: clash.yaml  proxy_groups.yaml.tpl  rule_providers.yaml.tpl  tail_rule.yaml
templates/rules/custom/: direct.list  proxy.list
