[project]
name = "clash-migrator"
version = "0.1.0"
description = "a migrator of migrating subscribes and rules"
requires-python = "==3.13.11"

dependencies = [
    "aiohttp",
    "pyyaml",
    "urllib3",
    "aiofiles",
    "dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "boto3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests","src"]
markers = ["offline","provider"]